logs/Slang/chapter-5/5.11-arrays.sv.log
name: arrays
description: Basic arrays test
should_fail: 0
tags: 5.11
files: /home/travis/build/SymbiFlow/sv-tests/tests/chapter-5/5.11-arrays.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-5/5.11-arrays.sv:8:21: error: language feature not yet supported
  int n[1:2][1:3] = '{'{0,1,2},'{3{4}}};
                    ^~~~~~~~~~~~~~~~~~~
